<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidDomInspection -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item   android:id="@+id/action_tickets"
            android:title="@string/tickets"
            android:icon="@drawable/mail_icon" />
    <item   android:id="@+id/action_search"
            android:title="@string/search"
            android:icon="@drawable/search_icon" />
    <item   android:id="@+id/action_stats"
            android:title="@string/stats"
            android:icon="@drawable/stats_icon" />
    <item   android:id="@+id/action_notifications"
            android:title="@string/notifications"
            android:icon="@drawable/notification_icon" />
    <item   android:id="@+id/action_profile"
            android:title="@string/profile"
            android:icon="@drawable/profile_icon" />
</menu>